Complete tests, update file names
